--- a/games-strategy/freelords/ChangeLog
+++ b/games-strategy/freelords/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-strategy/freelords
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freelords/ChangeLog,v 1.25 2006/10/09 15:05:34 wolf31o2 Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freelords/ChangeLog,v 1.26 2007/05/27 20:19:23 nyhm Exp $
+
+*freelords-0.3.8 (27 May 2007)
+
+  27 May 2007; Tristan Heaven <nyhm@gentoo.org> +freelords-0.3.8.ebuild:
+  Version bump, bug #179574
 
   09 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   files/digest-freelords-0.3.6, Manifest:
