--- a/sci-libs/blas-atlas/ChangeLog
+++ b/sci-libs/blas-atlas/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/blas-atlas
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.58 2007/05/19 02:21:03 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.59 2007/05/28 12:23:57 markusle Exp $
+
+*blas-atlas-3.7.32 (27 May 2007)
+
+  27 May 2007; Markus Dittrich <markusle@gentoo.org>
+  -blas-atlas-3.7.30.ebuild, +blas-atlas-3.7.32.ebuild:
+  Version bump. Mostly UltraSPARC and MIPS enhancements.
 
 *blas-atlas-3.7.31 (18 May 2007)
 
