--- a/sci-libs/lapack-atlas/ChangeLog
+++ b/sci-libs/lapack-atlas/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/lapack-atlas
 # Copyright 2004-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-atlas/ChangeLog,v 1.43 2007/05/19 02:23:19 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-atlas/ChangeLog,v 1.44 2007/05/28 12:25:49 markusle Exp $
+
+*lapack-atlas-3.7.32 (27 May 2007)
+
+  27 May 2007; Markus Dittrich <markusle@gentoo.org>
+  -lapack-atlas-3.7.30.ebuild, +lapack-atlas-3.7.32.ebuild:
+  Version bump. Mostly UltraSPARC and MIPS enhancements.
 
 *lapack-atlas-3.7.31 (18 May 2007)
 
