--- a/x11-misc/emacs-desktop/ChangeLog
+++ b/x11-misc/emacs-desktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/emacs-desktop
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.13 2007/05/15 09:56:03 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.14 2007/05/28 12:33:06 gustavoz Exp $
+
+  28 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  emacs-desktop-0.2-r1.ebuild:
+  Stable on sparc wrt #180100
 
   15 May 2007; Roy Marples <uberlord@gentoo.org>
   emacs-desktop-0.2-r1.ebuild:
