--- a/dev-util/git/ChangeLog
+++ b/dev-util/git/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/git
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.199 2007/05/24 15:24:21 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/git/ChangeLog,v 1.200 2007/05/28 13:15:30 ranger Exp $
+
+  28 May 2007; Brent Baude <ranger@gentoo.org> git-1.5.1.6.ebuild:
+  Marking git-1.5.1.6 ppc64 stable for bug 179245
 
   24 May 2007; Raúl Porcel <armin76@gentoo.org> git-1.5.1.6.ebuild:
   ia64 + x86 stable wrt #179245
