--- a/net-analyzer/sussen/ChangeLog
+++ b/net-analyzer/sussen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/sussen
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sussen/ChangeLog,v 1.48 2007/02/23 11:01:57 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/sussen/ChangeLog,v 1.49 2007/05/28 17:23:47 armin76 Exp $
+
+  28 May 2007; Raúl Porcel <armin76@gentoo.org> sussen-0.35.ebuild:
+  x86 stable wrt #179982
 
 *sussen-0.35 (23 Feb 2007)
 
