--- a/sys-power/powersave/ChangeLog
+++ b/sys-power/powersave/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/powersave
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powersave/ChangeLog,v 1.18 2007/04/17 22:12:06 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powersave/ChangeLog,v 1.19 2007/05/28 17:48:23 genstef Exp $
+
+  28 May 2007; Stefan Schweizer <genstef@gentoo.org> files/powersaved.rc:
+  Fix bashisms thanks Mike Arthur <mike@mikearthur.co.uk> in bug 179786
 
   17 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
   +files/powersave-as-needed.patch, powersave-0.15.11.ebuild:
