--- a/net-irc/xchat/ChangeLog
+++ b/net-irc/xchat/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-irc/xchat
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.248 2007/05/27 08:22:21 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.249 2007/05/28 18:24:42 armin76 Exp $
+
+  28 May 2007; Raúl Porcel <armin76@gentoo.org>
+  -files/xchat-2.6.6-suffix.patch, -files/xc280-fix-back.diff,
+  -files/xc280-fix-ja.diff, -xchat-2.6.6.ebuild, -xchat-2.8.0.ebuild:
+  old
 
   27 May 2007; Joshua Kinard <kumba@gentoo.org> xchat-2.8.2.ebuild:
   Stable on mips.
