--- a/dev-php5/phpdbg/ChangeLog
+++ b/dev-php5/phpdbg/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-php5/phpdbg
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/phpdbg/ChangeLog,v 1.9 2007/03/18 01:26:12 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/phpdbg/ChangeLog,v 1.10 2007/05/28 19:01:46 anant Exp $
+
+*phpdbg-2.15.5 (28 May 2007)
+
+  28 May 2007; Anant Narayanan <anant@gentoo.org> +phpdbg-2.15.5.ebuild:
+  vBump to 2.15.5
 
   18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> phpdbg-2.15.1.ebuild:
   Cleanup.
