--- a/kde-base/klaptopdaemon/ChangeLog
+++ b/kde-base/klaptopdaemon/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/klaptopdaemon
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/klaptopdaemon/ChangeLog,v 1.78 2007/05/25 13:48:14 cryos Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/klaptopdaemon/ChangeLog,v 1.79 2007/05/28 20:07:33 philantrop Exp $
+
+  28 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
+  +files/klaptopdaemon-3.5.7-libXss-linking.patch,
+  klaptopdaemon-3.5.7.ebuild:
+  Added patches from bug 179905 to allow for building with libXScrnSaver.
+  Thanks, pva and jmbsvicetto, for the patches.
 
   25 May 2007; Marcus D. Hanwell <cryos@gentoo.org>
   klaptopdaemon-3.5.7.ebuild:
