--- a/games-action/blobandconquer/ChangeLog
+++ b/games-action/blobandconquer/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-action/blobandconquer
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/blobandconquer/ChangeLog,v 1.3 2007/05/06 00:46:08 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/blobandconquer/ChangeLog,v 1.4 2007/05/28 21:46:31 nyhm Exp $
+
+*blobandconquer-0.91 (28 May 2007)
+
+  28 May 2007; Tristan Heaven <nyhm@gentoo.org> +blobandconquer-0.91.ebuild:
+  Version bump
 
 *blobandconquer-0.90 (06 May 2007)
 
