--- a/kde-base/kdeutils/ChangeLog
+++ b/kde-base/kdeutils/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdeutils
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.201 2007/05/25 13:53:18 cryos Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeutils/ChangeLog,v 1.202 2007/05/28 22:23:26 philantrop Exp $
+
+  28 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
+  +files/klaptopdaemon-3.5.7-libXss-linking.patch, kdeutils-3.5.7.ebuild:
+  Added patches from bug 179905 to allow for building with libXScrnSaver.
+  Thanks, pva and jmbsvicetto, for the patches.
 
   25 May 2007; Marcus D. Hanwell <cryos@gentoo.org> kdeutils-3.5.7.ebuild:
   Exclude obsolete patch that no longer applies cleanly. Closes bug 179553.
