--- a/net-www/awstats/ChangeLog
+++ b/net-www/awstats/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-www/awstats
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/awstats/ChangeLog,v 1.44 2007/03/19 02:09:38 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/awstats/ChangeLog,v 1.45 2007/05/29 00:21:00 rl03 Exp $
+
+  29 May 2007; Renat Lumpau <rl03@gentoo.org> awstats-6.6.ebuild:
+  Add geoip support per bug #103663.
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove ka0ttic from metadata.xml due to retirement.
