--- a/x11-misc/emacs-desktop/ChangeLog
+++ b/x11-misc/emacs-desktop/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/emacs-desktop
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.16 2007/05/28 14:07:36 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.17 2007/05/29 02:33:12 jer Exp $
+
+  29 May 2007; Jeroen Roovers <jer@gentoo.org> emacs-desktop-0.2-r1.ebuild:
+  Stable for HPPA (bug #180100).
 
   28 May 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-desktop-0.2-r1.ebuild:
