--- a/x11-libs/gtk-canvas/ChangeLog
+++ b/x11-libs/gtk-canvas/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/gtk-canvas
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-canvas/ChangeLog,v 1.7 2006/12/14 02:13:46 dberkholz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk-canvas/ChangeLog,v 1.8 2007/05/29 08:54:36 dberkholz Exp $
+
+*gtk-canvas-0.1.1-r2 (29 May 2007)
+
+  29 May 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  +files/0.1.1-as-needed.patch, +gtk-canvas-0.1.1-r2.ebuild:
+  Fix for --as-needed linker flag.
 
   14 Dec 2006; Donnie Berkholz <dberkholz@gentoo.org>;
   gtk-canvas-0.1.1-r1.ebuild:
