--- a/x11-misc/emacs-desktop/ChangeLog
+++ b/x11-misc/emacs-desktop/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/emacs-desktop
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.17 2007/05/29 02:33:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/emacs-desktop/ChangeLog,v 1.18 2007/05/29 11:03:36 armin76 Exp $
+
+  29 May 2007; Raúl Porcel <armin76@gentoo.org>
+  emacs-desktop-0.2-r1.ebuild:
+  alpha/ia64 stable wrt #180100
 
   29 May 2007; Jeroen Roovers <jer@gentoo.org> emacs-desktop-0.2-r1.ebuild:
   Stable for HPPA (bug #180100).
