--- a/sci-libs/lapack-atlas/ChangeLog
+++ b/sci-libs/lapack-atlas/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/lapack-atlas
 # Copyright 2004-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-atlas/ChangeLog,v 1.44 2007/05/28 12:25:49 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/lapack-atlas/ChangeLog,v 1.45 2007/05/29 13:15:05 markusle Exp $
+
+  29 May 2007; Markus Dittrich <markusle@gentoo.org>
+  lapack-atlas-3.7.32.ebuild:
+  Fixed wrong dependency on blas-atlas (see bug #180134).
 
 *lapack-atlas-3.7.32 (27 May 2007)
 
