--- a/gnome-extra/nautilus-cd-burner/ChangeLog
+++ b/gnome-extra/nautilus-cd-burner/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-extra/nautilus-cd-burner
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/ChangeLog,v 1.160 2007/04/25 01:45:14 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-cd-burner/ChangeLog,v 1.161 2007/05/29 15:29:31 gustavoz Exp $
+
+  29 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  nautilus-cd-burner-2.16.3.ebuild:
+  Stable on sparc wrt #171107
 
 *nautilus-cd-burner-2.18.1 (25 Apr 2007)
 
