--- a/dev-python/numarray/ChangeLog
+++ b/dev-python/numarray/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/numarray
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/numarray/ChangeLog,v 1.25 2007/05/24 16:29:22 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/numarray/ChangeLog,v 1.26 2007/05/29 15:33:57 bicatali Exp $
+
+  29 May 2007; Sébastien Fabbro <bicatali@gentoo.org>
+  +files/numarray-1.5.2-freebsd.patch, numarray-1.5.2-r1.ebuild:
+  Added a patch for freebsd, thanks to Joe Peterson <joe@skyrush.com> .
+  Removed array_protocol tests, buggy with various numeric/numpy versions.
+  Thanks to Diego Pettenò <flameeyes@gentoo.org> for reporting.
 
   24 May 2007; Diego Pettenò <flameeyes@gentoo.org>
   numarray-1.5.2-r1.ebuild:
