--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.228 2007/05/28 08:41:58 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.229 2007/05/29 15:43:26 gustavoz Exp $
+
+  29 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  control-center-2.16.3.ebuild:
+  Stable on sparc wrt #171107
 
   28 May 2007; Mart Raudsepp <leio@gentoo.org> control-center-2.16.3.ebuild:
   Restrict tests
