--- a/xfce-base/xfce-mcs-plugins/ChangeLog
+++ b/xfce-base/xfce-mcs-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for xfce-base/xfce-mcs-plugins
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.98 2007/05/27 06:18:40 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce-mcs-plugins/ChangeLog,v 1.99 2007/05/29 16:44:02 drac Exp $
+
+  29 May 2007; Samuli Suominen <drac@gentoo.org>
+  xfce-mcs-plugins-4.4.1-r1.ebuild:
+  Drop in x11-apps/xrdb runtime dep for DPI settings.
 
   27 May 2007; Joshua Kinard <kumba@gentoo.org>
   xfce-mcs-plugins-4.4.1.ebuild:
