--- a/games-strategy/freelords/ChangeLog
+++ b/games-strategy/freelords/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/freelords
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/freelords/ChangeLog,v 1.26 2007/05/27 20:19:23 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/freelords/ChangeLog,v 1.27 2007/05/29 17:00:02 nyhm Exp $
+
+  29 May 2007; Tristan Heaven <nyhm@gentoo.org> freelords-0.3.8.ebuild:
+  Fix locale.alias collision, bug #180099
 
 *freelords-0.3.8 (27 May 2007)
 
