--- a/dev-python/PyQt/ChangeLog
+++ b/dev-python/PyQt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/PyQt
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.86 2007/05/29 14:09:39 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/PyQt/ChangeLog,v 1.87 2007/05/29 17:28:05 armin76 Exp $
+
+  29 May 2007; Raúl Porcel <armin76@gentoo.org> PyQt-3.17.ebuild:
+  alpha/x86 stable wrt #174413
 
   29 May 2007; Brent Baude <ranger@gentoo.org> PyQt-3.17.ebuild:
   Marking PyQt-3.17 ppc64 stable for bug 174413
