--- a/gnome-base/gnome-mount/ChangeLog
+++ b/gnome-base/gnome-mount/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/gnome-mount
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-mount/ChangeLog,v 1.34 2007/05/17 14:14:37 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-mount/ChangeLog,v 1.35 2007/05/29 20:48:45 remi Exp $
+
+  29 May 2007; Remi Cardona <remi@gentoo.org>
+  +files/gnome-mount-0.6-include-locale-h.patch, gnome-mount-0.6.ebuild:
+  add #include <locale.h> to fix bug #176035
 
   17 May 2007; Roy Marples <uberlord@gentoo.org>
   +files/gnome-mount-0.6-freebsd-schemas.patch, gnome-mount-0.6.ebuild:
