--- a/games-kids/stickers/ChangeLog
+++ b/games-kids/stickers/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for games-kids/stickers
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-kids/stickers/ChangeLog,v 1.11 2007/02/22 01:03:16 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-kids/stickers/ChangeLog,v 1.12 2007/05/30 05:55:05 tupone Exp $
+
+*stickers-0.1.3-r2 (30 May 2007)
+
+  30 May 2007; Tupone Alfredo <tupone@gentoo.org> +stickers-0.1.3-r2.ebuild:
+  Added menu_entry. Bug #160254 by Pacho Ramos
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
