--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.230 2007/05/30 00:41:38 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/control-center/ChangeLog,v 1.231 2007/05/30 12:41:24 armin76 Exp $
+
+  30 May 2007; Raúl Porcel <armin76@gentoo.org>
+  control-center-2.16.3.ebuild:
+  alpha/ia64 stable wrt #171107
 
   29 May 2007; Andrej Kacian <ticho@gentoo.org>
   control-center-2.16.3.ebuild:
