--- a/app-editors/emacs-cvs/ChangeLog
+++ b/app-editors/emacs-cvs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/emacs-cvs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.124 2007/05/29 07:21:59 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs-cvs/ChangeLog,v 1.125 2007/05/30 13:32:16 ulm Exp $
+
+  30 May 2007; Ulrich Mueller <ulm@gentoo.org>
+  +files/emacs-cvs-disable_alsa_detection-r1.patch,
+  emacs-cvs-22.0.9999-r10.ebuild, emacs-cvs-22.1.50.ebuild,
+  emacs-cvs-23.0.0-r6.ebuild:
+  Fix alsa detection patch.
 
   29 May 2007; Ulrich Mueller <ulm@gentoo.org> emacs-cvs-22.0.990.ebuild,
   emacs-cvs-22.0.9999-r10.ebuild, emacs-cvs-22.1.50.ebuild,
