--- a/app-portage/autounmask/ChangeLog
+++ b/app-portage/autounmask/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-portage/autounmask
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.16 2007/05/29 19:42:33 ian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.17 2007/05/30 14:05:20 ian Exp $
+
+*autounmask-0.19 (30 May 2007)
+
+  30 May 2007; Christian Hartmann <ian@gentoo.org> -autounmask-0.18.ebuild,
+  +autounmask-0.19.ebuild:
+  Fix bug #180062 - comment 2; old
 
 *autounmask-0.18 (29 May 2007)
 
