--- a/dev-php4/phpdbg/ChangeLog
+++ b/dev-php4/phpdbg/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php4/phpdbg
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php4/phpdbg/ChangeLog,v 1.10 2007/03/18 01:27:37 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php4/phpdbg/ChangeLog,v 1.11 2007/05/30 15:49:47 chtekk Exp $
+
+*phpdbg-2.15.5 (30 May 2007)
+
+  30 May 2007; Luca Longinotti <chtekk@gentoo.org> -phpdbg-2.15.1.ebuild,
+  +phpdbg-2.15.5.ebuild:
+  Version bump.
 
   18 Mar 2007; Luca Longinotti <chtekk@gentoo.org> phpdbg-2.15.1.ebuild:
   Cleanup.
