--- a/dev-php/phpdbg-client/ChangeLog
+++ b/dev-php/phpdbg-client/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/phpdbg-client
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/phpdbg-client/ChangeLog,v 1.7 2007/03/18 01:21:18 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/phpdbg-client/ChangeLog,v 1.8 2007/05/30 15:52:44 chtekk Exp $
+
+*phpdbg-client-2.15.5 (30 May 2007)
+
+  30 May 2007; Luca Longinotti <chtekk@gentoo.org>
+  -phpdbg-client-2.15.1.ebuild, +phpdbg-client-2.15.5.ebuild:
+  Version bump.
 
 *phpdbg-client-2.15.1 (18 Mar 2007)
 
