--- a/net-im/gossip/ChangeLog
+++ b/net-im/gossip/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-im/gossip
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.64 2007/03/15 19:09:16 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gossip/ChangeLog,v 1.65 2007/05/30 17:03:16 tester Exp $
+
+*gossip-0.25 (30 May 2007)
+
+  30 May 2007; <tester@gentoo.org> +gossip-0.25.ebuild:
+  Version bump
 
   15 Mar 2007; Markus Rothe <corsair@gentoo.org> gossip-0.23.ebuild:
   Added ~ppc64; bug #170307
