--- a/dev-java/jcifs/ChangeLog
+++ b/dev-java/jcifs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jcifs
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jcifs/ChangeLog,v 1.10 2007/06/07 11:14:17 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jcifs/ChangeLog,v 1.11 2007/06/14 22:00:38 dertobi123 Exp $
+
+  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> jcifs-1.2.13.ebuild:
+  ppc stable, bug #180363
 
   07 Jun 2007; Markus Rothe <corsair@gentoo.org> jcifs-1.2.13.ebuild:
   Stable on ppc64; bug #180363
