--- a/gnome-extra/evolution-data-server/ChangeLog
+++ b/gnome-extra/evolution-data-server/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.129 2007/06/14 21:01:34 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.130 2007/06/14 22:28:47 opfer Exp $
+
+  14 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
+  evolution-data-server-1.6.2-r1.ebuild,
+  evolution-data-server-1.8.3-r5.ebuild:
+  stable x86, security bug 182011
 
   14 Jun 2007; Brent Baude <ranger@gentoo.org>
   evolution-data-server-1.6.2-r1.ebuild,
