--- a/dev-db/libdbi-drivers/ChangeLog
+++ b/dev-db/libdbi-drivers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/libdbi-drivers
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.22 2006/11/23 19:56:37 vivo Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libdbi-drivers/ChangeLog,v 1.23 2007/06/15 01:55:15 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  libdbi-drivers-0.8.1-r1.ebuild:
+  Stable on amd64 wrt bug 181579
 
   23 Nov 2006; Francesco Riosa <vivo@gentoo.org>
   libdbi-drivers-0.7.1-r1.ebuild, libdbi-drivers-0.8.0.ebuild,
