--- a/media-video/video-entropyd/ChangeLog
+++ b/media-video/video-entropyd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-video/video-entropyd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/video-entropyd/ChangeLog,v 1.8 2007/05/01 01:49:18 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/video-entropyd/ChangeLog,v 1.9 2007/06/15 02:06:59 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  video-entropyd-0.7.ebuild:
+  Stable on amd64 wrt bug 181588
 
   01 May 2007; Marius Mauch <genone@gentoo.org> video-entropyd-0.7.ebuild:
   Replacing einfo with elog
