--- a/net-misc/rdate/ChangeLog
+++ b/net-misc/rdate/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/rdate
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/rdate/ChangeLog,v 1.43 2007/06/11 19:12:56 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/rdate/ChangeLog,v 1.44 2007/06/15 02:13:47 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org> rdate-1.4-r3.ebuild:
+  Stable on amd64 wrt bug 181604
 
   11 Jun 2007; Markus Rothe <corsair@gentoo.org> rdate-1.4-r3.ebuild:
   Stable on ppc64; bug #181604
