--- a/net-analyzer/raddump/ChangeLog
+++ b/net-analyzer/raddump/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/raddump
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/raddump/ChangeLog,v 1.2 2007/05/12 04:58:13 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/raddump/ChangeLog,v 1.3 2007/06/15 02:23:09 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org> raddump-0.3.1.ebuild:
+  Stable on amd64 wrt bug 181593
 
 *raddump-0.3.1 (12 May 2007)
 
