--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.390 2007/06/09 09:11:25 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.391 2007/06/15 03:10:57 zmedico Exp $
+
+*portage-2.1.3_rc1 (15 Jun 2007)
+
+  15 Jun 2007; Zac Medico <zmedico@gentoo.org> +portage-2.1.3_rc1.ebuild:
+  2.1.3_rc1 release candidate. This fixes bugs #81097, #134620, #148702,
+  #153109, #181355, #181387, #181551, and #181953.
 
   09 Jun 2007; Zac Medico <zmedico@gentoo.org> -portage-2.1.2.10.ebuild:
   Punt 2.1.2.10 due to bug #181387.
