--- a/dev-perl/Cairo/ChangeLog
+++ b/dev-perl/Cairo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Cairo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.30 2007/06/15 02:50:13 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Cairo/ChangeLog,v 1.31 2007/06/15 02:51:42 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org> -Cairo-1.01.ebuild,
+  -Cairo-1.02.1.ebuild, -Cairo-1.02.3.ebuild:
+  Cleaning out stale ebuilds
 
   15 Jun 2007; Michael Cummings <mcummings@gentoo.org> Cairo-1.04.0.ebuild:
   Marking amd64 stable
