--- a/dev-perl/WWW-Mechanize-FormFiller/ChangeLog
+++ b/dev-perl/WWW-Mechanize-FormFiller/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/WWW-Mechanize-FormFiller
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/WWW-Mechanize-FormFiller/ChangeLog,v 1.3 2007/04/14 15:13:47 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/WWW-Mechanize-FormFiller/ChangeLog,v 1.4 2007/06/15 03:27:00 mcummings Exp $
+
+  15 Jun 2007; Michael Cummings <mcummings@gentoo.org>
+  WWW-Mechanize-FormFiller-0.06.ebuild:
+  Updating ebuild (missing IUSE)
 
   14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
   WWW-Mechanize-FormFiller-0.06.ebuild:
