--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.467 2007/06/13 12:40:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.468 2007/06/15 08:04:54 je_fro Exp $
+
+  15 Jun 2007; Jeff Gardner <je_fro@gentoo.org> use.local.desc:
+  Add vhosts and client-only USE flags for sci-chemistry/jmol.
 
   13 Jun 2007; Raúl Porcel <armin76@gentoo.org> use.local.desc:
   Add restrict-javascript USE-flag for www-client/mozilla-firefox-bin
