--- a/x11-plugins/wmwifi/ChangeLog
+++ b/x11-plugins/wmwifi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmwifi
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmwifi/ChangeLog,v 1.12 2006/10/18 08:19:54 s4t4n Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmwifi/ChangeLog,v 1.13 2007/06/15 09:06:17 s4t4n Exp $
+
+  15 Jun 2007; Michele Noberasco <s4t4n@gentoo.org> metadata.xml:
+  Fixed automake dependancy. Closes bug #181714.
 
   18 Oct 2006; Michele Noberasco <s4t4n@gentoo.org> metadata.xml:
   Added missing automake dependancy. Closes bug #150648.
