--- a/net-p2p/deluge/ChangeLog
+++ b/net-p2p/deluge/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/deluge
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.14 2007/06/12 18:14:15 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/deluge/ChangeLog,v 1.15 2007/06/15 10:20:15 armin76 Exp $
+
+*deluge-9999 (15 Jun 2007)
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> +deluge-9999.ebuild:
+  Add livesvn ebuild
 
 *deluge-0.5.1.1 (12 Jun 2007)
 
