--- a/net-libs/xulrunner/ChangeLog
+++ b/net-libs/xulrunner/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/xulrunner
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.33 2007/06/13 21:03:08 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.34 2007/06/15 10:25:11 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> xulrunner-1.8.1.4.ebuild:
+  Enable parallel compile, bug 181722
 
   13 Jun 2007; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.8.0.4.ebuild,
   -xulrunner-1.8.1.3.ebuild:
