--- a/dev-db/sqlite/ChangeLog
+++ b/dev-db/sqlite/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/sqlite
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.152 2007/06/15 02:16:41 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.153 2007/06/15 10:28:22 corsair Exp $
+
+  15 Jun 2007; Markus Rothe <corsair@gentoo.org> sqlite-3.3.17.ebuild:
+  Stable on ppc64; bug #182013
 
   15 Jun 2007; Christoph Mende <angelos@gentoo.org> sqlite-3.3.17.ebuild:
   Stable on amd64 wrt bug 182013
