--- a/app-editors/jove/ChangeLog
+++ b/app-editors/jove/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-editors/jove
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/jove/ChangeLog,v 1.13 2007/01/19 14:06:31 masterdriverz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/jove/ChangeLog,v 1.14 2007/06/15 10:32:47 opfer Exp $
+
+*jove-4.16.0.70.3 (15 Jun 2007)
+
+  15 Jun 2007; Christian Faulhammer <opfer@gentoo.org> metadata.xml,
+  +jove-4.16.0.70.3.ebuild:
+  adding emacs team as maintaining herd
+  version bump
 
   19 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
   jove-4.16.0.56.1.ebuild, jove-4.16.0.65.4.ebuild, jove-4.16.0.69.5.ebuild:
