--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.391 2007/06/15 03:10:57 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.392 2007/06/15 10:46:04 zmedico Exp $
+
+*portage-2.1.3_rc2 (15 Jun 2007)
+
+  15 Jun 2007; Zac Medico <zmedico@gentoo.org> -portage-2.1.3_rc1.ebuild,
+  +portage-2.1.3_rc2.ebuild:
+  2.1.3_rc2 bump for bug #182105 (fix a traceback that is triggered at
+  emerge exit if PROMPT_COMMAND is exported).
 
 *portage-2.1.3_rc1 (15 Jun 2007)
 
