--- a/gnome-extra/evolution-data-server/ChangeLog
+++ b/gnome-extra/evolution-data-server/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.130 2007/06/14 22:28:47 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.131 2007/06/15 10:58:30 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org>
+  evolution-data-server-1.6.2-r1.ebuild,
+  evolution-data-server-1.8.3-r5.ebuild:
+  alpha/ia64 stable wrt security #182011
 
   14 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
   evolution-data-server-1.6.2-r1.ebuild,
